# test-api-fastapi-opencode

./: .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
client/: package.json
server/: pyproject.toml
server/src/: main.py
server/src/application/auth/: use_cases.py
server/src/domain/: filesystem.py  user.py  user_repository.py
server/tests/: test_auth_use_cases.py  test_filesystem_domain.py  test_main.py  test_user_domain.py
